css/style.css
@charset "UTF-8";
/* Layout */
/* Fonts */
/* Colors*/
/* Borders */
/*----------  Lato  ----------*/
@font-face {
  font-family: 'latoregular';
  src: url("../fonts/lato/Lato-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal; }

@font-face {
  font-family: 'latobold';
  src: url("../fonts/lato/Lato-Bold.ttf") format("truetype");
  font-weight: normal;
  font-style: normal; }

/*----------  Eurof  ----------*/
@font-face {
  font-family: 'eurofbold';
  src: url("../fonts/euro/eurof55.ttf") format("truetype");
  font-weight: normal;
  font-style: normal; }

/*----------  Font Awesome  ----------*/
@font-face {
  font-family: 'fontawesome';
  src: url("../fonts/fontawesome/FontAwesome.otf");
  src: url("../fonts/fontawesome/fontawesome-webfont.eot") format("embedded-opentype"), url("../fonts/fontawesome/fontawesome-webfont.woff2") format("woff2"), url("../fonts/fontawesome/fontawesome-webfont.woff") format("woff"), url("../fonts/fontawesome/fontawesome-webfont.ttf") format("truetype"), url("../fonts/fontawesome/fontawesome-webfont.svg") format("svg");
  font-weight: normal;
  font-style: normal; }

@font-face {
    font-family: 'MavenReg';
    src: url("../fonts/MavenPro/MavenPro-Regular.ttf") 
  }

@font-face {
  font-family: 'LatoReg';
  src: url('../fonts/lato/Lato-Regular.ttf');
}


.fa {
  display: inline-block;
  font-family: fontawesome;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale; }

/* Breakpoint mixins */
/* Size Functions */
/* Layout mixins */
.clean-list {
  list-style-type: none;
  margin: 0;
  padding: 0; }

.logo {
  font-family: eurofbold, serif;
  font-size: 2.5rem; }
  .logo span {
    color: #58c93a; }

.flex {
  display: flex; }

.flex-1 {
  flex: 1; }

.justify-center {
  justify-content: center; }

.justify-end {
  justify-content: flex-end; } 

.reverse {
  flex-direction: row-reverse ;
}  

.column{
    flex-direction: column ;
    
}
.wrap{
  flex-wrap: wrap;
}

.align-center {
  align-items: center; }

.space-between {
  justify-content: space-between; }

.space-around {
  justify-content: space-around; }



/*---------- Layout  ----------*/
* {
  box-sizing: border-box; }

.main-container {
 
  margin: 0 auto;
  padding:20px;
   }
  @media (max-width: 980px) {
    .contact-us-container {
      flex-wrap: wrap;

    }
    .container {
      max-width: 740px; } }
  @media (max-width: 740px) {
    .contact-us-container {
      flex-wrap: wrap;

    }
    .container {
      max-width: 100%; } }

html {
  font-family: latoregular, sans-serif;
  color: #292929; }

body {
  margin: 0;
  background-color: #AAA;
 }



h1 {
  font-size: 3rem;
  letter-spacing: 2px; }

button {
  cursor: pointer; }

.img-wrapper {
  height: 100%; }
    
header {
  background: url("../img/header-bg.gif");
  height: 130px;
  color: #fff;
  font-family: latobold, sans-serif; }
  header .header-wrapper {
    height: 100% }
  header .logo {
    padding: 0 20px; }

.main-menu a {
  color: #fff;
  text-decoration: none;
  display: block;
  line-height: 130px;
  height: 130px;
  width: 8.4375rem;
  text-align: center;
  border-right: 1px solid #1e1e1e; }
  .main-menu a:first-child {
    border-left: 1px solid #1e1e1e; }
  .main-menu a.active {
    border-bottom: 6px solid #58c93a;
    color: #58c93a; }
  .main-menu a:hover {
    color: #58c93a; }

@media (max-width: 850px){
  .about-us{
    flex-direction: column;
    
  }

} 
.show-all-memes {
  padding: 20px;
}

.keywords {
  font-size: 30px;
  text-align: center;
}

.keywords-container  {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: baseline;
  
}

.keywords-container a {
  padding: 10px;
  text-decoration:none;
}



footer {
  background: #f8f8f8;
  padding: 70px 0;
  text-align: center;
  border-top: 1px solid #e1e0e0;
  color: #a6a6a6; }
  footer .logo {
    color: #292929;
    margin-bottom: 30px; }



    .grid {
      display: grid;
      grid-gap: 20px;
      grid-auto-rows: 100%; 
      /* grid-template-rows:  repeat(4, 1fr); */
      grid-template-columns: repeat(4, 1fr);
      
     
    }
    @media (max-width: 740px) {
      header{
        height:80px;
        padding-right:30px;
        
      }
      .main-menu a{
        height:80px;
        line-height:80px;
        padding-left:20px;
        padding-right:20px;
        
        width:100%; 
      }
      
      


      
     
      .grid{
        grid-gap: 20px;
        
    grid-auto-rows: 100%; 
    /* grid-template-rows:  repeat(4, 1fr); */
    grid-template-columns: repeat(3, 1fr);
      }
    }
    
    
    
      @media (max-width: 550px) {
        
        .grid{
          grid-gap: 20px;
      grid-auto-rows: 100%; 
      
      
        }

        header{
          height:50px;
        }
        
        .main-menu a{
          height:50px;
          line-height:50px;
          padding-left:10px;
          padding-right:10px; 
          width:100%; 
        }
       
      }
        .image-item{
          /* height:50vh;
          width:100%; */
          margin-bottom:20px;
        }

    


    /* .hide{
      display:none;
    } */

    .clicked-btn-shadow {
      border :2px solid lightblue;
    }

    .clicked-btn-align-right {
      border :2px solid lightblue;
    }
    .clicked-btn-align-center {
      border :2px solid lightblue;
    }

    .clicked-btn-align {
      border :2px solid lightblue;
    }

    canvas {
      border :1px solid rgb(73, 69, 69);
      margin: 0 auto;
    }
     .imgs-container img{
      width:100%;
      height:100%;
     }

     .meme-options-container{
      padding:20px;
     }

     .line-container .enter-text{
       margin-bottom: 10px;
     }

     .top-line-text{
       width:350px;
     }

     .bottom-line-text{
       width:500px;
     }
     .searchBar{
       text-align: center;
       margin-bottom:10px;
       padding-bottom: 10px;
       border-bottom:1px solid rgb(197, 194, 194)
     }

     .meme-page{
       height:0px;
       overflow:hidden;
       transition: all 5s;
     }
     
     .meme-page.show{
       height:auto;
    }

    .color-picker{
      width: 24px;
      height:30px;    
    }
    
    .text-shadow{
      text-shadow: 2px 1px;
    }
    .add-line {
      margin-left:10px;
    }
    .about-us{
    padding:30px;
    background-color:rgb(119, 143, 126)
    

    /* font-family:'MavenReg', sans-serif;
    font-family: 'Maven Pro', sans-serif;
    /* font-family:'LatoReg', sans-serif; */
    /* font-family:'latoregular', sans-serif;
    font-family: 'Maven Pro', sans-serif;
    font-family:'MavenReg', sans-serif;  */
    /* font-family:'latobold', sans-serif; */
    }

    .about-us h2{
      font-size:30px;
      color:white;
    }

    .about-us h3{
      font-size:24px;
      color: #d7fcf5;
    }
    .about-us p{
      font-size:16px;
      color:white;
    }


    .about-us img{
      width:256px;
      height:192px;
      border-radius: 50%;
      margin-right:40px;
      
    }

    .about-us .info{
      padding-bottom:10px;
       border-bottom:1px solid rgb(197, 194, 194); 
       margin-bottom:10px;  
    }
    .about-us{
      border-radius: 2%;
    }


    
    
    /* contact form */

    

    .container-form {
      /* max-width:400px; */
      width:100%;
      margin:0 auto;
      /* position:relative; */
    }
    
    #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
    
    #contact {
      background:#F9F9F9;
      padding:25px;
      /* margin:50px 0; */
    }
    
    #contact h3 {
      color: #F96;
      display: block;
      font-size: 30px;
      font-weight: 400;
    }
    
    #contact h4 {
      margin:5px 0 15px;
      display:block;
      font-size:13px;
    }
    
    fieldset {
      border: medium none !important;
      margin: 0 0 10px;
      min-width: 100%;
      padding: 0;
      width: 100%;
    }
    
    #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
      width:100%;
      border:1px solid #CCC;
      background:#FFF;
      margin:0 0 5px;
      padding:10px;
    }
    
    #contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
      -webkit-transition:border-color 0.3s ease-in-out;
      -moz-transition:border-color 0.3s ease-in-out;
      transition:border-color 0.3s ease-in-out;
      border:1px solid #AAA;
    }
    
    #contact textarea {
      height:100px;
      max-width:100%;
      resize:none;
    }
    
    #contact button[type="submit"] {
      cursor:pointer;
      width:100%;
      border:none;
      background:#0CF;
      color:#FFF;
      margin:0 0 5px;
      padding:10px;
      font-size:15px;
    }
    
    #contact button[type="submit"]:hover {
      background:#09C;
      -webkit-transition:background 0.3s ease-in-out;
      -moz-transition:background 0.3s ease-in-out;
      transition:background-color 0.3s ease-in-out;
    }
    
    #contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
    
    #contact input:focus, #contact textarea:focus {
      outline:0;
      border:1px solid #999;
    }
   

      /* .img001 {
      background: url("../images/image-001.jpg");
      background-position: center center;
      background-size: cover;
      
    }
    
    .img002 {
      background: url("../images/image-002.jpg");
      background-position: center center;
      background-size: cover;
      
    }   */

     

    

